# structfs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  manifesto.md  package.json  pnpm-lock.yaml
.claude/commands/: royb.md
.github/workflows/: deploy-namecode-site.yml
docs/: coverage.md  representation.md  royb_feedback_2025_12_28.md
docs/design/: layered_core.md  minimal_core.md  minimal_core_zero_copy.md
docs/patterns/: meta.md  pagination.md  reference.md
docs/plan/: recommended_additions.md
docs/plans/: fs-hateoas.md  fs-meta-canonical.md  fs-meta-lens.md  http-hateoas.md
featherweight/: Cargo.toml
featherweight/guest/: Cargo.toml
featherweight/guest/src/: lib.rs
featherweight/guest/wit/: world.wit
featherweight/runtime/: Cargo.toml
featherweight/runtime/examples/: hello_world.rs  wasm_hello.rs
featherweight/runtime/src/: block.rs  channel.rs  error.rs  lib.rs  runtime.rs  wasm_block.rs
featherweight/src/: lib.rs
isotope/: README.md  TODO.md
isotope/examples/: 01-hello-world.md  02-web-service.md
isotope/misc/: royb_critique_2026_01_18.md
isotope/rationale/: 01-why-stores.md  02-why-assemblies.md  03-empowering-app-engineers.md
isotope/spec/: 00-overview.md  01-blocks.md  02-assemblies.md  03-namespaces.md  04-context.md  04-system-paths.md  05-lifecycle.md  06-protocol.md  07-server-protocol.md  08-assembly-management.md
namecode/: Cargo.toml  README.md  SPEC.md
namecode/proptest-regressions/: lib.txt
namecode/site/: .eleventy.js  .gitignore  build.sh  clean.sh  dev.sh  package-lock.json  package.json  pnpm-lock.yaml
namecode/site/src/: identifiers.md  index.njk  playground.njk  spec.md
namecode/site/src/_data/: site.json
namecode/site/src/_includes/: base.njk
namecode/site/src/css/: style.css  syntax.css
namecode/site/src/js/: playground.js
namecode/site/wasm/: Cargo.toml
namecode/site/wasm/src/: lib.rs
namecode/src/: bootstring.rs  decode.rs  encode.rs  lib.rs  main.rs
plans/: 00-overview.md  01-document-mutability.md  01-fix-unmount.md  02-idempotent-http-broker.md  03-filesystem-position.md  04-registers-as-store.md  05-error-cleanup.md  06-document-mutability.md  06-overlay-trie.md  07-docs-router.md  07b-docs-router-completion.md
scripts/: coverage.sh  quality_gates.sh  release_namecode.sh  run_wasm_block.sh
tmp/: cov.txt
