[workspace]
resolver = "2"
members = [
    "packages/ll-store",
    "packages/core-store",
    "packages/serde-store",
    "packages/json_store",
    "packages/http",
    "packages/repl",
    "packages/sys",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/AdjectiveNoun/structfs"

[workspace.dependencies]
# Workspace crates - layered architecture
structfs-ll-store = { path = "packages/ll-store" }
structfs-core-store = { path = "packages/core-store" }
structfs-serde-store = { path = "packages/serde-store" }

# Workspace crates - store implementations
structfs-json-store = { path = "packages/json_store" }
structfs-http = { path = "packages/http" }
structfs-repl = { path = "packages/repl" }
structfs-sys = { path = "packages/sys" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking"] }
http = "1.2"
url = "2.5"

# Error handling
thiserror = "2.0"

# Utilities
lazy_static = "1.5"
collection_literals = "1.0"

# Testing
tempfile = "3.14"
wiremock = "0.6"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }

# CLI/REPL
reedline = "0.44"
nu-ansi-term = "0.50"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
