[package]
name = "namecode"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Encode Unicode strings as valid programming language identifiers"
readme = "README.md"
keywords = ["unicode", "identifier", "encoding", "punycode", "uax31"]
categories = ["encoding", "text-processing"]
rust-version = "1.56"
exclude = ["proptest-regressions/"]

[dependencies]
unicode-ident = "1.0"

[dev-dependencies]
proptest = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
