[package]
name = "featherweight-guest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Guest library for building Featherweight WASM Blocks"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }

[package.metadata.component]
package = "featherweight:block"

[package.metadata.component.target]
path = "wit/world.wit"
world = "block-world"
