[package]
name = "featherweight-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Block-based pico-process runtime for Isotope virtual OS"

[dependencies]
structfs-core-store = { workspace = true }

wasmtime = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
collection_literals = { workspace = true }

[[example]]
name = "hello_world"
